fixed buttons on ios

--- a/src/Styles/Global.css
+++ b/src/Styles/Global.css
@@ -2,6 +2,9 @@ a {
   text-decoration: none !important;
   color: black !important;
 }
+button {
+  color: black !important;
+}
 
 ul {
   list-style-type: none;
